fix alignment of Flashcard

--- a/client/src/Components/ViewFlashcard.css
+++ b/client/src/Components/ViewFlashcard.css
@@ -2,5 +2,9 @@
     max-width: max-content;
 }
 .test {
+    text-align: center;
+    align-items: center;
+    display: flex;
     justify-content: center;
+    
 }
